working minus formula

--- a/UXO/res/layout/activity_main.xml
+++ b/UXO/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
         android:layout_alignBaseline="@+id/explosive_weight"
         android:layout_alignBottom="@+id/explosive_weight"
         android:layout_alignParentRight="true"
-        android:text="@string/KG" />
+        android:text="@string/KG" 
+        android:textSize ="25sp"/>
 
     <Spinner
         android:id="@+id/explosive_list"
@@ -19,19 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:entries="@array/explosive_list" />
-
-    <EditText
-        android:id="@+id/explosive_weight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/explosive_list"
-        android:layout_toLeftOf="@+id/weight_text"
-        android:ems="120"
-        android:inputType="number"
-        android:onClick="onWeightClick"
-        android:text="@string/weight" />
+        android:entries="@array/explosive_list"
+        android:textSize ="25sp" />
 
     <TextView
         android:id="@+id/meters_text"
@@ -41,23 +31,7 @@
         android:layout_alignBottom="@+id/blast_radius"
         android:layout_alignParentRight="true"
         android:text="@string/meters"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <Spinner
-        android:id="@+id/calc_method"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/weight_text"
-        android:layout_centerHorizontal="true"
-        android:entries="@array/calc_method" />
-
-    <TextView
-        android:id="@+id/blast_radius"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/calc_method"
-        android:text="@string/blast_radius"
+        android:textSize ="25sp"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <Button
@@ -68,5 +42,42 @@
         android:layout_centerHorizontal="true"
         android:onClick="calculate"
         android:text="@string/calculate" />
+
+    <EditText
+        android:id="@+id/explosive_weight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/explosive_list"
+        android:layout_marginTop="27dp"
+        android:layout_toLeftOf="@+id/meters_text"
+        android:ems="120"
+        android:inputType="number"
+        android:onClick="onWeightClick"
+        android:textSize ="25sp"
+        android:text="@string/weight" >
+
+        <requestFocus />
+    </EditText>
+
+    <Spinner
+        android:id="@+id/calc_method"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/explosive_weight"
+        android:layout_marginTop="26dp"
+        android:textSize ="25sp"
+        android:entries="@array/calc_method" />
+
+    <TextView
+        android:id="@+id/blast_radius"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/calc_method"
+        android:layout_marginTop="17dp"
+        android:text="@string/blast_radius"
+        android:textSize ="25sp"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
